QQOcr.sln 编译通过。

--- a/QQImplDLL/QQOcr/QQOcr/QQOcr.vcxproj.filters
+++ b/QQImplDLL/QQOcr/QQOcr/QQOcr.vcxproj.filters
@@ -46,8 +46,8 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <MASM Include="QQOcrAsm.asm">
+    <None Include="QQOcrAsm.asm">
       <Filter>源文件\OCR</Filter>
-    </MASM>
+    </None>
   </ItemGroup>
 </Project>
