--- a/QQImplDLL/UsageExample/c++/QQOcrUsage/QQOcrUsage.vcxproj.filters
+++ b/QQImplDLL/UsageExample/c++/QQOcrUsage/QQOcrUsage.vcxproj.filters
@@ -21,12 +21,12 @@
     <ClCompile Include="..\..\..\QQOcr\depends\ocr_protobuf\ocr_protobuf.pb.cc">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\..\..\cppx\cppx\include\funclib.cpp">
+    <ClCompile Include="..\..\..\..\..\..\..\cppx\cppx\include\cppx\funclib.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\..\..\..\cppx\cppx\include\funclib.h">
+    <ClInclude Include="..\..\..\..\..\..\..\cppx\cppx\include\cppx\funclib.h">
       <Filter>源文件</Filter>
     </ClInclude>
   </ItemGroup>
