--- a/QQImplDLL/QQOcr/QQOcr/QQOcr64.vcxproj.filters
+++ b/QQImplDLL/QQOcr/QQOcr/QQOcr64.vcxproj.filters
@@ -50,4 +50,9 @@
       <Filter>源文件\OCR</Filter>
     </MASM>
   </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="..\..\..\..\..\..\note\build\infai.rc">
+      <Filter>资源文件</Filter>
+    </ResourceCompile>
+  </ItemGroup>
 </Project>
