--- a/QQImplDLL/UsageExample/c++/QQOcrUsage/QQOcrUsage.vcxproj
+++ b/QQImplDLL/UsageExample/c++/QQOcrUsage/QQOcrUsage.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{7a7edac5-c501-443a-b0c7-11f52ff39e45}</ProjectGuid>
     <RootNamespace>QQOcrUsage</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>WeChatOCRUsage</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -97,7 +98,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>IlmImfd.lib;libjpeg-turbod.lib;libopenjp2d.lib;libpngd.lib;libprotobufd.lib;libtiffd.lib;libwebpd.lib;opencv_core460d.lib;opencv_features2d460d.lib;opencv_highgui460d.lib;opencv_imgcodecs460d.lib;opencv_imgproc460d.lib;opencv_photo460d.lib;opencv_video460d.lib;QQOcr.lib;zlibd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>IlmImfd.lib;libjpeg-turbod.lib;libopenjp2d.lib;libpngd.lib;libprotobufd.lib;libtiffd.lib;libwebpd.lib;opencv_core460d.lib;opencv_features2d460d.lib;opencv_highgui460d.lib;opencv_imgcodecs460d.lib;opencv_imgproc460d.lib;opencv_photo460d.lib;opencv_video460d.lib;wechatocr32.lib;zlibd.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>..\..\..\..\..\..\..\cppx\cppx\libs\14.29.30037_spectre\x86;..\..\..\..\..\..\..\note\infai\fastocr\RapidOcrNcnn\opencv-static\opencv-4.6.0-windows-vs2019-md-debug\windows-x86\x86\vc16\staticlib;..\..\..\..\..\3rdparty\protobuf-3.11.2\win32\lib;$(SolutionDir)Bin\$(Platform)\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -118,7 +119,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>IlmImf.lib;libjpeg-turbo.lib;libopenjp2.lib;libpng.lib;libprotobuf.lib;libtiff.lib;libwebp.lib;opencv_core480.lib;opencv_features2d480.lib;opencv_flann480.lib;opencv_highgui480.lib;opencv_imgcodecs480.lib;opencv_imgproc480.lib;opencv_photo480.lib;opencv_video480.lib;QQOcr.lib;zlib.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>IlmImf.lib;libjpeg-turbo.lib;libopenjp2.lib;libpng.lib;libprotobuf.lib;libtiff.lib;libwebp.lib;opencv_core480.lib;opencv_features2d480.lib;opencv_flann480.lib;opencv_highgui480.lib;opencv_imgcodecs480.lib;opencv_imgproc480.lib;opencv_photo480.lib;opencv_video480.lib;wechatocr32.lib;zlib.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>..\..\..\..\..\..\..\cppx\cppx\libs\14.29.30037_spectre\x86;..\..\..\..\..\..\..\note\infai\fastocr\RapidOcrNcnn\opencv-static\windows-x86\x86\vc16\staticlib;..\..\..\..\..\3rdparty\protobuf-3.11.2\win32\lib-mt;$(SolutionDir)Bin\$(Platform)\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -135,7 +136,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>IlmImfd.lib;libjpeg-turbod.lib;libopenjp2d.lib;libpngd.lib;libprotobufd.lib;libtiffd.lib;libwebpd.lib;opencv_core460d.lib;opencv_features2d460d.lib;opencv_highgui460d.lib;opencv_imgcodecs460d.lib;opencv_imgproc460d.lib;opencv_photo460d.lib;opencv_video460d.lib;QQOcr64.lib;zlibd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>IlmImfd.lib;libjpeg-turbod.lib;libopenjp2d.lib;libpngd.lib;libprotobufd.lib;libtiffd.lib;libwebpd.lib;opencv_core460d.lib;opencv_features2d460d.lib;opencv_highgui460d.lib;opencv_imgcodecs460d.lib;opencv_imgproc460d.lib;opencv_photo460d.lib;opencv_video460d.lib;wechatocr64.lib;zlibd.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>..\..\..\..\..\..\..\cppx\cppx\libs\14.29.30037_spectre\x64;..\..\..\..\..\..\..\note\infai\fastocr\RapidOcrNcnn\opencv-static\opencv-4.6.0-windows-vs2019-md-debug\windows-x64\x64\vc16\staticlib;..\..\..\..\..\3rdparty\protobuf-3.11.2\win64\lib;$(SolutionDir)Bin\$(Platform)\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -156,7 +157,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>IlmImf.lib;libjpeg-turbo.lib;libopenjp2.lib;libpng.lib;libprotobuf.lib;libtiff.lib;libwebp.lib;opencv_core480.lib;opencv_features2d480.lib;opencv_flann480.lib;opencv_highgui480.lib;opencv_imgcodecs480.lib;opencv_imgproc480.lib;opencv_photo480.lib;opencv_video480.lib;QQOcr64.lib;zlib.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>IlmImf.lib;libjpeg-turbo.lib;libopenjp2.lib;libpng.lib;libprotobuf.lib;libtiff.lib;libwebp.lib;opencv_core480.lib;opencv_features2d480.lib;opencv_flann480.lib;opencv_highgui480.lib;opencv_imgcodecs480.lib;opencv_imgproc480.lib;opencv_photo480.lib;opencv_video480.lib;wechatocr64.lib;zlib.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>..\..\..\..\..\..\..\cppx\cppx\libs\14.29.30037_spectre\x64;..\..\..\..\..\..\..\note\infai\fastocr\RapidOcrNcnn\opencv-static\windows-x64\x64\vc16\staticlib;..\..\..\..\..\3rdparty\protobuf-3.11.2\win64\lib-mt;$(SolutionDir)Bin\$(Platform)\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
