--- a/QQImplDLL/QQOcr/QQOcr/QQOcr.vcxproj.filters
+++ b/QQImplDLL/QQOcr/QQOcr/QQOcr.vcxproj.filters
@@ -51,7 +51,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="..\..\..\..\..\..\note\build\infai.rc">
+    <ResourceCompile Include="..\..\..\..\..\..\note\build\xai.rc">
       <Filter>源文件</Filter>
     </ResourceCompile>
   </ItemGroup>
